@@ -693,8 +693,7 @@ managed."
 	    (when (or (eql map-state :viewable)
 		      (eql wm-state +iconic-state+))
 	      (format t "Processing ~S: type=~A ~S~%" (xlib:wm-name win) (window-type win)win)
-	      ;;	    (unhide-window win)
 	      (process-new-window win)
-	      (xlib:map-window win)
+	      (raise-window win)
 	      (pushnew (xlib:window-id win) id-list))))))
     (netwm-set-client-list id-list)))
